fix attribution mobile

--- a/style.css
+++ b/style.css
@@ -59,10 +59,9 @@
     }
     
     .attribution {
-        position:absolute;
         bottom: 0;
         width: 100%;
-        padding: 5px 0 5px 0;
+        padding: 20px 0 5px 0;
     }
     
 
